TMDB#WIP: setup redux, add UI Framework UI Kitten & create home page

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'TMDB' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'TMDBTests' do
     inherit! :complete
     # Pods for testing
