--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-navigation/native": "^6.0.10",
-    "@ui-kitten/components": "^5.1.2",
     "axios": "^0.26.1",
-    "native-base": "^3.3.10",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-axios": "^0.17.1",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-svg": "^12.3.0",
+    "react-native-paper": "^4.12.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9"
